# ws-api-python

./: README.md  pyproject.toml  setup.py
tests/: test_exceptions.py  test_formatters.py  test_full_example.py  test_session.py  test_wealthsimple_api.py  test_wealthsimple_api_happy.py
ws_api/: __init__.py  exceptions.py  formatters.py  graphql_queries.py  session.py  wealthsimple_api.py
